--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -101,7 +101,7 @@ function connect(bridge) {
 			var uaId = cw.whoami.getUaId();
 			var transportNumber = ++transportCount;
 			var helloData = {
-				'n': transportNumber, 'v': 2, 'w': transportNumber == 0 ? true : false, 'i': streamId,
+				'n': transportNumber, 'v': 2, 'w': transportNumber == 0 ? 1 : 0, 'i': streamId,
 				'c': {'uaId': uaId, 'csrf': window.CSRF_TOKEN},
 				'r': 9999999, 'm': 3600};
 			var helloFrame = [cw.net.FrameType.hello, helloData];
@@ -109,7 +109,11 @@ function connect(bridge) {
 			// If the server receives this more than once, it is subsequently ignored because the box # is always 0, and box 0 was already received. 
 			var boxesFrame = [cw.net.FrameType.boxes, {"0": ['send_demo']}];
 
-			var out = fs.writeSerializedFrames_([ser(helloFrame), ser(gimmeFrame), ser(boxesFrame)]);
+			var frames = [ser(helloFrame), ser(gimmeFrame), ser(boxesFrame)];
+			for(i=0; i < frames.length; i++) {
+				logger.info('Sending: ' + frames[i]);
+			}
+			var out = fs.writeSerializedFrames_(frames);
 			logger.info('writeSerializedFrames_ rvalue: ' + out);
 		} catch(e) {
 			logger.severe('error in onconnect', e);
@@ -135,7 +139,7 @@ function connect(bridge) {
 		logger.info('onframes with '+frames.length+' frame(s). hadError? ' + hadError);
 		for(var i=0; i < frames.length; i++) {
 			var frame = frames[i]; 
-			logger.info('frame: '+ser(frame));
+			logger.info('Received: '+ser(frame));
 		}
 	}
 
