Change StringFragment to use ' ' instead of '~' marker. This allows for an optimization where Minerva in browser environments can pass the space-suffixed string to the JavaScript application, where it is promptly eval()ed or JSON.parse()d with the trailing space. (In this case, we avoid creating a new string without the space).

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -124,7 +124,7 @@ function connect(bridge) {
 			// subsequently ignored because the box # is always 0,
 			// and box 0 was already received.
 			var seqNumFrame = '0' + 'N'; // not really necessary to send
-			var boxFrame = 'send_demo' + '~';
+			var boxFrame = 'send_demo' + ' ';
 
 			var frames = [helloFrame, seqNumFrame, boxFrame];
 			for(i=0; i < frames.length; i++) {
