--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -72,9 +72,11 @@ function getRandom() {
 	return goog.string.getRandomString() + goog.string.getRandomString();
 }
 
+
 function byId(o) {
 	return document.getElementById(o);
 }
+
 
 function getTestMode(url) {
 	var queryData = url.getQueryData();
@@ -86,6 +88,7 @@ function getTestMode(url) {
 	}
 	return mode;
 }
+
 
 var serializer = new goog.json.Serializer();
 
@@ -103,9 +106,11 @@ function loadSWF() {
 	swfobject.embedSWF("app.swf", "appswf", "30", "30", [9, 0, 0], "expressInstall.swf", flashvars, params); // no attributes
 }
 
+
 function _appswfLoaded() {
 	connectWithFlash(document.getElementById('appswf'));
 }
+
 
 var transportCount = -1;
 var streamId = getRandom();
@@ -128,6 +133,23 @@ function makeHelloData(uaId, transportNumber) {
 	return helloData;
 }
 
+
+function makeC2SFramesForTesting() {
+	var uaId = cw.whoami.getUaId();
+	var transportNumber = ++transportCount;
+	// TODO: use constant names instead of these single-letter strings
+	var helloData = makeHelloData(uaId, transportNumber);
+	var helloFrame = serializer.serialize(helloData) + 'H';
+	// If the server receives this more than once, it is
+	// subsequently ignored because the box # is always 0,
+	// and box 0 was already received.
+	var seqNumFrame = '0' + 'N'; // not really necessary to send
+	var boxFrame = 'send_demo' + ' ';
+	var frames = [helloFrame, seqNumFrame, boxFrame];
+	return frames;
+}
+
+
 function connectWithFlash(bridge) {
 	logger.warning('Connecting.');
 	var fs = new cw.net.FlashSocket(bridge);
@@ -138,19 +160,7 @@ function connectWithFlash(bridge) {
 	fs.onconnect = function() {
 		try {
 			logger.info('onconnect');
-
-			var uaId = cw.whoami.getUaId();
-			var transportNumber = ++transportCount;
-			// TODO: use constant names instead of these single-letter strings
-			var helloData = makeHelloData(uaId, transportNumber);
-			var helloFrame = serializer.serialize(helloData) + 'H';
-			// If the server receives this more than once, it is
-			// subsequently ignored because the box # is always 0,
-			// and box 0 was already received.
-			var seqNumFrame = '0' + 'N'; // not really necessary to send
-			var boxFrame = 'send_demo' + ' ';
-
-			var frames = [helloFrame, seqNumFrame, boxFrame];
+			var frames = makeC2SFramesForTesting();
 			for(i=0; i < frames.length; i++) {
 				logger.info('Sending: ' + frames[i]);
 			}
@@ -189,11 +199,13 @@ function connectWithFlash(bridge) {
 	lastFlashSocket = fs;
 }
 
+
 function reconnect() {
 	logger.warning('Closing.');
 	lastFlashSocket.close_();
 	connectWithFlash(document.getElementById('appswf'));
 }
+
 
 function sendAck(n) {
 	logger.warning('sendAck: ' + n);
