flashtest/flashtest.html: add a failsafe: stop after 200 transports connected

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -239,7 +239,11 @@ function httpRequestDone(e) {
 		logger.info('Received: ' + serializer.serialize(frame));
 		handleFrame(frame)
 	}
-	setTimeout(makeHttpRequest, 500);
+	if(transportCount < 200) {
+		setTimeout(makeHttpRequest, 250);
+	} else {
+		logger.warn("Stopped testing because transportCount > 200");
+	}
 }
 
 
