--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -233,7 +233,7 @@ function handleFrame(frame) {
 
 
 function terminateLastXhr() {
-	// If we don't unlisten, we go into a request-making loop
+	// If we don't unlisten, we may go into a request-making loop
 	goog.events.unlisten(lastXhr, goog.net.EventType.COMPLETE, httpRequestDone);
 	lastXhr.dispose();
 	lastXhr = null;
